LDEV-2972: removing sun.misc.BASE64Decoder